objects/Activity_Code__c.object
<CustomObject>
    <description>Business rules and process metadata associated with each available code applied to tasks.</description>
    <fields>
        <fullName>Account_Archive_Category__c</fullName>
        <label>Account Archive Category</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Security_Category__c</fullName>
        <label>Account Security Category</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Statistics_Category__c</fullName>
        <label>Account Statistics Category</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Code_Type__c</fullName>
        <label>Activity Code Type</label>
        <picklist>
            <picklistValues>
                <fullName>CMPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WUQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Review_Date_Adv__c</fullName>
        <label>Auto Review Date Adv</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Review_Date_Base__c</fullName>
        <label>Auto Review Date Base</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CTI_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CTI Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTI_Reason__c</fullName>
        <label>CTI Reason</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Result__c</fullName>
        <label>CTI Result</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Code__c</fullName>
        <label>Collection Activity Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_List_Number__c</fullName>
        <label>Collection List Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Letter_Number__c</fullName>
        <label>Default Letter Number</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Time_Loop__c</fullName>
        <label>Default Time Loop</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flag_Active__c</fullName>
        <label>Flag Active</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Contact__c</fullName>
        <label>Flag Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_Letter_Required__c</fullName>
        <label>Flag Letter Required</label>
        <picklist>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag Notes  Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Promise_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag Promise Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Quick__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Flag Quick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_RPC__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Flag RPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Refer_To_Supervisor__c</fullName>
        <label>Flag Refer To Supervisor</label>
        <picklist>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_Skip__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Flag Skip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Time_Loop_Allowed__c</fullName>
        <label>Flag Time Loop Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Maintenance_Date__c</fullName>
        <label>Last Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Bank__c</fullName>
        <label>Maintenance Bank</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Collection_UserID__c</fullName>
        <label>Maintenance Collection UserID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>CheckFree Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misapplied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Click to Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overnighted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WUQC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WUSP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promise_Max_Days__c</fullName>
        <label>Promise Max Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promise_Max_Grace_Days__c</fullName>
        <label>Promise Max Grace Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promise_Minimum_Amount__c</fullName>
        <label>Promise Minimum Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promise_Minimum_Percent__c</fullName>
        <label>Promise Minimum Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Review_Date_Maxium_Adv__c</fullName>
        <label>Review Date Maxium Adv</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order_Quick__c</fullName>
        <description>Used to set the sort order for &quot;Quick&quot; activity codes</description>
        <label>Sort Order - Quick</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order_RPC__c</fullName>
        <description>Used to set the sort order for &quot;RPC&quot; activity codes</description>
        <label>Sort Order - RPC</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order_Skip__c</fullName>
        <description>Used to set the sort order for &quot;Skip&quot; activity codes</description>
        <label>Sort Order - Skip</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Talked_To__c</fullName>
        <label>Talked To</label>
        <picklist>
            <picklistValues>
                <fullName>3P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3P Auth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3P not auth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATTY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS &amp; CX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSS - SD WAS AUTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAGT</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Activity Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Flag_Quick__c</columns>
        <columns>Flag_RPC__c</columns>
        <columns>Flag_Skip__c</columns>
        <columns>Flag_Promise_Required__c</columns>
        <columns>Flag_Notes_Required__c</columns>
        <columns>CTI_Activity__c</columns>
        <columns>CTI_Result__c</columns>
        <columns>CTI_Reason__c</columns>
        <columns>Talked_To__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Phone_Type__c</columns>
        <columns>Account_Security_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activity Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Code</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>